# nicepaper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: auth.py  config.py  main.py  test_acceptance.py  test_util.py  util.py
app/api/: endpoints.py
app/auth/: __init__.py  base.py  none.py  password.py  proxy.py
app/core/: drawingcontext.py  imagecache.py  screen.py  test_screen_cache.py  updateschedule.py
app/core/datasources/: ical.py  test_ical.py
app/core/widgets/: __init__.py  base.py  date.py  roomcalendar.py  text.py
app/models/: screenmodel.py  test_models.py  updateschedulemodel.py
app/ui/: frontend.py
docs/: README.md  architecture.md  configuration.md  design-lorawan.md  development.md  screens.md
examples/: aliases.json  organizer_names.json
examples/schedules/: default.json
examples/screens/: roomcalendar.json  simple.json  weather.json
extensions/epaper/: __init__.py  config.py  paths.py  util.py
extensions/epaper/api/: endpoints.py
extensions/epaper/core/: charting.py  drawingcontext.py  imagecache.py  screen.py  updateschedule.py
extensions/epaper/core/datasources/: ical.py  image.py  weather.py
extensions/epaper/core/widgets/: __init__.py  base.py  date.py  image.py  roomcalendar.py  text.py  weather.py
extensions/epaper/models/: global_config.py  screenmodel.py  updateschedulemodel.py
extensions/epaper/ui/: panels.py  schedule_editor.py  screen_editor.py  standalone.py
extensions/epaper/wire/: __init__.py  huffman_de.py
firmware/: huffman_de.c  huffman_de.h
tests/: test_acceptance.py  test_charting.py  test_clipping.py  test_huffman_de.py  test_ical.py  test_image.py  test_models.py  test_panels.py  test_password.py  test_screen_cache.py  test_updateschedule.py  test_util.py  test_weather.py
