[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nicepaper"
version = "0.9.0"
description = "Renders screens (e.g. door signs with room calendars) as PNG images for e-paper displays; FastAPI backend with a NiceGUI management UI, installable as a nice4iot extension (extensions.epaper) or run standalone"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "clausgf" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "fastapi",
    "nicegui",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "pillow",
    "babel",
    "icalendar",
    "recurring-ical-events",
    "aiohttp",
    "aiofiles",
    "python-dateutil",
    "niceview",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
# `packages = ["extensions/epaper"]` (the previous config) looks right but
# isn't: hatchling's `packages` always strips down to the leaf directory
# name as the wheel-root package, so it silently produced a flat `epaper/`
# top-level package instead of `extensions/epaper/` -- verified by
# building the wheel and listing its contents. That breaks nice4iot's
# extension mechanism outright (it requires extensions/<name>/, see
# nice4iot's docs/extensions.md and this package's __init__.py docstring)
# and was the root cause of a build crash reported downstream ("second
# file added to the wheel archive at the same path: epaper/resources/..."):
# the force-include entry for resources got remapped through the same
# leaf-stripping logic as `packages`, landing at the same final path as
# the copy `packages` already included, hence the collision.
#
# `only-include` does not do any path stripping -- it copies the given
# paths into the wheel verbatim, so `extensions/epaper/...` lands at
# `extensions/epaper/...` in the wheel, `extensions/` itself has no
# __init__.py (preserving the PEP 420 namespace package nice4iot's own
# extensions share), and resources are only included once (no separate
# force-include needed at all). Verified: built the wheel, listed its
# contents (extensions/epaper/__init__.py present, no extensions/__init__.py,
# no duplicate/leaked files), pip-installed it into a throwaway venv and
# imported `extensions.epaper` successfully from outside this repo.
only-include = ["extensions"]

[tool.uv]
# don't build/install nicepaper's own wheel into its own .venv --
# standalone/dev just runs from source (uv run uvicorn main:app), and
# the Docker image locks+installs *dependencies* before the source is
# even copied in (see Dockerfile). This is purely local to this repo's
# own venv: when another project (e.g. nice4iot) adds nicepaper as a
# dependency, its own uv build uses [build-system]/[tool.hatch...]
# above regardless of this flag.
package = false

[tool.uv.sources]
# no PyPI release yet. Track niceview's git the same way nice4iot does, so
# nicepaper's own dev/CI env resolves the same niceview nice4iot pulls in
# the real (extension) deployment -- note this source only governs *this*
# repo's standalone/dev/CI: uv does not inherit a dependency's
# [tool.uv.sources], so when nice4iot consumes nicepaper, nice4iot's own
# niceview source/lock wins. uv.lock pins the exact commit for reproducible
# CI here; re-run 'uv lock --upgrade-package niceview' to move it forward.
niceview = { git = "https://github.com/clausgf/niceview.git" }

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
# Conservative set, matching niceview's: pyflakes (real bugs -- unused
# imports, undefined names, f-strings without placeholders) plus syntax
# errors. Style rules are intentionally left off to avoid churn on the
# existing, deliberately-formatted code.
select = ["E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
